feat: enabled caching and pagination
* Users complained about slow get endpoints to implemented Caching
* This should alleviate some issues as the roundtrip to the server won't be needed
every time. Also evicted the cache when items are added
* Also enabled pagination to reduce DB load
