# src/main/java/com/example/store/controller/CustomerController.java
@@ -2,38 +2,39 @@ package com.example.store.controller;
 
 import com.example.store.dto.CustomerDTO;
 import com.example.store.entity.Customer;
-import com.example.store.mapper.CustomerMapper;
-import com.example.store.repository.CustomerRepository;
+import com.example.store.service.CustomerService;
 
 import lombok.RequiredArgsConstructor;
 
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.web.PageableDefault;
 import org.springframework.http.HttpStatus;
 import org.springframework.lang.NonNull;
 import org.springframework.web.bind.annotation.*;
-
-import java.util.List;
 
 @RestController
 @RequestMapping("/customer")
 @RequiredArgsConstructor
 public class CustomerController {
 
-    private final CustomerRepository customerRepository;
-    private final CustomerMapper customerMapper;
+    private final CustomerService customerService;
 
     @GetMapping
-    public List<CustomerDTO> getAllCustomers() {
-        return customerMapper.customersToCustomerDTOs(customerRepository.findAll());
+    public Page<CustomerDTO> getAllCustomers(@PageableDefault(size = 20) @NonNull Pageable pageable) {
+        return customerService.getAllCustomers(pageable);
     }
 
     @GetMapping(params = "name")
-    public List<CustomerDTO> getCustomersByNamePart(@RequestParam("name") @NonNull String namePart) {
-        return customerMapper.customersToCustomerDTOs(customerRepository.findCustomersByNamePart(namePart));
+    public Page<CustomerDTO> getCustomersByNamePart(
+            @RequestParam("name") @NonNull String namePart,
+            @PageableDefault(size = 20) @NonNull Pageable pageable) {
+        return customerService.getCustomersByNamePart(namePart, pageable);
     }
 
     @PostMapping
     @ResponseStatus(HttpStatus.CREATED)
-    public CustomerDTO createCustomer(@RequestBody Customer customer) {
-        return customerMapper.customerToCustomerDTO(customerRepository.save(customer));
+    public CustomerDTO createCustomer(@RequestBody @NonNull Customer customer) {
+        return customerService.createCustomer(customer);
     }
 }
